<resources>
    <string name="app_name">DayTimeApp</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="uto">UTO</string>
    <string name="PON">PON</string>
    <string name="UTO">UTO</string>
    <string name="SRI">SRI</string>
    <string name="CET">ČET</string>
    <string name="PET">PET</string>
    <string name="nazad">nazad</string>
    <string name="naprijed">naprijed\n</string>
    <string name="naziv">Naziv:</string>
    <string name="Naziv">Naziv</string>
    <string name="datum">Datum</string>
    <string name="Datum">Datum\n</string>
    <string name="name">Name:</string>
    <string name="date">Date</string>
    <string name="Time">Time</string>
    <string name="Date">Date\n</string>
    <string name="Name">Name</string>
    <string name="Spremi">Spremi</string>
    <string name="Velj_2023">Velj 2023</string>
    <string name="Utorak">Utorak</string>
    <string name="Novi_dogadaj">Novi Događaj</string>
    <string name="Dan">Dan</string>
    <string name="Nazad">Nazad</string>
    <string name="velj_2023">Velj 2023</string>
    <string name="Naprijed">Naprijed</string>
    <string name="Pon">PON</string>
    <string name="Uto">UTO</string>
    <string name="Sri">SRI</string>
    <string name="Cet">ČET</string>
    <string name="Pet">PET</string>
    <string name="Sub">SUB</string>
    <string name="Ned">NED</string>
    <string name="novi_dogadaj">Novi Događaj</string>
    <string name="_1">1</string>
    <string name="dogadaj">događaj</string>
    <string name="_10_00">10:00</string>
    <string name="event1">event1</string>
    <string name="event2">event2</string>
    <string name="event3">event3</string>
    <string name="Dnevni">Dnevni</string>
    <string name="natrag" />
    <string name="event_1">Event 1</string>
    <string name="Event_2">Event 2</string>
    <string name="Event_1">Event 1</string>
    <string name="Event_3">event 3</string>
    <string name="select_time">Select Time</string>
</resources>