...
    tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Tjedan"
        android:textColor="@color/dark_red"
        android:background="@null"
        android:textStyle="bold"
        android:onClick="weeklyAction"
        android:textSize="20sp"
        tools:ignore="HardcodedText" />
...


    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendarRecyclerView"
        android:layout_width="match_parent"
        android:background="@color/lightGray"
        android:layout_height="match_parent"/>

</LinearLayout>

...
