...
        android:textStyle="bold"
        android:onClick="newEventAction"
        android:layout_gravity="center"
        android:textSize="20sp"/>

    <ListView
        android:id="@+id/satiListView"
        android:layout_width="match_parent"
        android:background="@color/yellow"
        android:layout_height="0dp"
        android:layout_weight="5"/>

</LinearLayout>
